# crocoprompt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TECHNOLOGIES.md  pyproject.toml  ruff.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  pytest.yml  workflow.yml
construct/: base.py  few_shot.py  zero_shot.py
construct/thought/: cok.py
construct/thought/cot/: base.py  cue_cot.py
convert/: __init__.py  markdown.py  xml.py  yaml.py
crocoprompt/: __init__.py
crocoprompt/construct/: __init__.py  base.py  few_shot.py  zero_shot.py
crocoprompt/construct/thought/: __init__.py  cok.py
crocoprompt/construct/thought/cot/: __init__.py  base.py  ccot.py  cod.py  cue_cot.py  few_shot_cot.py  tot.py
crocoprompt/convert/: __init__.py  base.py  markdown.py  xml.py  yaml.py
crocoprompt/tests/test_construct/: test_base.py  test_few_shot.py  test_thought.py  test_zero_shot.py
crocoprompt/tests/test_convert/: test_converters.py
tests/test_construct/: test_base.py  test_few_shot.py  test_thought.py  test_zero_shot.py
tests/test_convert/: test_converters.py
